# documentation-as-code

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/actions/: action.yaml
.github/workflows/: publish.yaml  test.yaml
documentation/: README.md  design_specification.md  operator_manual.md  retirement_plan.md  risk_assessment.md  user_manual.md  verification_plan.md
documentation/features/: 1_specification.feature  2_design.feature  2_risk.feature  3_risk.feature  4_test.feature  5_json.feature  5_operator_manual.feature  6_user_manual.feature  7_retirement.feature  8_json.feature  README.md  specification.feature
src/: files.rs  lib.rs  main.rs  specification.rs  to_html.rs
tests/: it.rs  main.rs
tests/fixtures/valid_project/: design_specification.md  risk_assessment.md  user_requirements_specification.md  verification_plan.md
tests/fixtures/valid_project/documentation/: design_specification.md  risk_assessment.md
tests/fixtures/valid_project/documentation/features/: test.feature
tests/project1/documentation/: test_plan.md  user_requirements_specification.md
