[package]
name = "quality"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "quality"
path = "src/main.rs"

[[test]]
name = "it"
harness = false  # allows Cucumber to print output instead of libtest

[dependencies]
pulldown-cmark = {version = "0.9.2", default-features = false}
either = "1"
regex = {version = "1", default-features = false}
lazy_static = "1"
clap = {version = "4", features = ["derive"]}
gherkin = "*"

[dev-dependencies]
cucumber = "*"
futures = "0.3"
# test CLI
assert_cmd = "2.0.7"
predicates = "2"
