[package]
name = "documentation-as-code"
authors = ["Jorge C. Leitao <jorgecarleitao@gmail.com>"]
homepage = "https://github.com/medical-software-quality/documentation-as-code"
repository = "https://github.com/medical-software-quality/documentation-as-code"
description = "A CI/CD tool to check documentation of software fit for GxP use"
license = "MIT"
version = "0.1.0"
edition = "2021"

[lib]
name = "documentation_as_code_gxp"
path = "src/lib.rs"

[[bin]]
name = "quality"
path = "src/main.rs"

[[test]]
name = "it"
harness = false  # allows Cucumber to print output instead of libtest

[dependencies]
pulldown-cmark = {version = "0.9.2", default-features = false}
regex = {version = "1", default-features = false, features = ["std"]}
lazy_static = "1"
clap = {version = "4", features = ["derive"]}
gherkin = "0.14.0"
indexmap = {version = "1", features = ["serde"]}
serde = {version = "1", features = ["derive"]}
serde_json = { version = "1", default-features = false, features = ["alloc"] }

[dev-dependencies]
cucumber = "*"
futures = "0.3"
# test CLI
assert_cmd = "2.0.7"
predicates = "2"
